--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,10 +1,10 @@
 # Fill these before deploy
-BENZINGA_API_KEY = ""
-ALPACA_API_KEY = ""
-ALPACA_SECRET_KEY = ""
-EMAIL_HOST = ""
+BENZINGA_API_KEY = "bz.ZQT3PDVLO5UTQTIRXF2Y6H2PV4ZYBP5W"
+ALPACA_API_KEY = "PK22VOVPVLGM6C6UIELB"
+ALPACA_SECRET_KEY = "4tw3wBLXMShCfthbipKgsYQAorAIOUkUfUIe2Lfy"
+EMAIL_HOST = "smtp.gmail.com"
 EMAIL_PORT = 587
-EMAIL_USERNAME = ""
-EMAIL_PASSWORD = ""
-TELEGRAM_BOT_TOKEN = ""
-TELEGRAM_CHAT_ID = ""
+EMAIL_USERNAME = "bntrbot@gmail.com"
+EMAIL_PASSWORD = "KirpaKareinDataar4452#"
+TELEGRAM_BOT_TOKEN = "8165510648:AAGu_nTjRYx7h3k2kl5OLCB6UlACpVdytrI"
+TELEGRAM_CHAT_ID = "411186785"
