--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,10 +1,19 @@
-# Fill these before deploy
+# --- API Keys ---
 BENZINGA_API_KEY = "bz.ZQT3PDVLO5UTQTIRXF2Y6H2PV4ZYBP5W"
+
+# Alpaca credentials
 ALPACA_API_KEY = "PK22VOVPVLGM6C6UIELB"
 ALPACA_SECRET_KEY = "4tw3wBLXMShCfthbipKgsYQAorAIOUkUfUIe2Lfy"
+ALPACA_BASE_URL = "https://paper-api.alpaca.markets/v2"  # or live API URL
+
+# --- Email Alerts ---
 EMAIL_HOST = "smtp.gmail.com"
-EMAIL_PORT = 587
-EMAIL_USERNAME = "bntrbot@gmail.com"
-EMAIL_PASSWORD = "KirpaKareinDataar4452#"
+EMAIL_PORT = "587"
+EMAIL_HOST_USER = "bntrbot@gmail.com"
+EMAIL_HOST_PASSWORD = "KirpaKareinDataar4452#"
+EMAIL_FROM = "bntrbot@gmail.com"
+EMAIL_TO = "kbxbnb@gmail.com"
+
+# --- Telegram Alerts ---
 TELEGRAM_BOT_TOKEN = "8165510648:AAGu_nTjRYx7h3k2kl5OLCB6UlACpVdytrI"
 TELEGRAM_CHAT_ID = "411186785"
